--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=8888
 #spring.datasource.name=cloud
 #spring.datasource.password=fUZMy8n#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mc_health_archive?allowMultiQueries=true&serverTimezone=UTC
-spring.datasource.username= root
-spring.datasource.password= 123456
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3003/mc_health_archive?allowMultiQueries=true&serverTimezone=UTC
-#spring.datasource.username=cloud
-#spring.datasource.password=fUZMy8n#
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mc_health_archive?allowMultiQueries=true&serverTimezone=UTC
+#spring.datasource.username= root
+#spring.datasource.password= 123456
+spring.datasource.url=jdbc:mysql://127.0.0.1:3003/mc_health_archive?allowMultiQueries=true&serverTimezone=UTC
+spring.datasource.username=cloud
+spring.datasource.password=fUZMy8n#
 #ES
 #spring.data.elasticsearch.cluster-name=elasticsearch
 #spring.data.elasticsearch.cluster-nodes=127.0.0.1:9001
